# restaurant-name-generator

./: .env.example  README.md  app.ipynb  generator.py  langchain_helper.py  main.py  pyproject.toml  requirements.txt  restaurant_name.ipynb
.github/workflows/: python-app.yml
