[project]
name = "restaurant-name-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-google-genai>=2.1.3",
    "python-dotenv==1.0.1",
    "streamlit==1.31.0",
]
